--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     - name: Checkout Code
@@ -31,5 +31,4 @@ jobs:
     - name: Build Docker Image
       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-war:latest .
 
-    - name: Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/simple-war:latest
+   
