--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,10 +25,7 @@ jobs:
     - name: Build with Maven
       run: mvn clean package
 
-    - name: Login to DockerHub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
     - name: Build Docker Image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/simple-war:latest .
+      run: docker build -t dockerimage .
 
    
