--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,8 @@ jobs:
         distribution: 'temurin'
         java-version: '11'
 
-    - name: Build with Maven
-      run: mvn clean package
+    # - name: Build with Maven
+    #   run: mvn clean package
 
     - name: Build Docker Image
       run: docker build -t dockerimage .
