--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,12 @@ jobs:
     - name: Build Docker Image
       run: docker build -t dockerimage .
 
+
+# sudo groupadd docker  # Ensure the docker group exists
+# sudo usermod -aG docker $(whoami)  # Add the current user
+# sudo usermod -aG docker ubuntu  # Add the 'ubuntu' user (or any specific user)
+# sudo chmod 666 /var/run/docker.sock
+
+
+
    
