--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Java Maven Build & Docker Publish
+name: Python Flask Docker build
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  docker-build:
     runs-on: self-hosted
 
     steps:
